# SEForMedia

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  zsh_functions.sh
ASL/: .gitignore  ASLPart1.ipynb  ASLPart1Marimo.py  ASLPart2CNN.ipynb  ASLPart2CNNMarimo.py  ASLPart3DataAugmentation.ipynb  ASLPart3DataAugmentationMarimo.py
Checkpoints/: CheckPoints.ipynb  CheckPointsMarimo.py
Classification/: BinaryClassification.ipynb  BinaryClassificationMarimo.py  MultiClassification.ipynb  MultiClassificationMarimo.py  SimpleClassification.ipynb  SimpleClassificationMarimo.py
ImageLab/: .gitignore  ImageLab.ipynb  ImageLabSolution.ipynb
JupyterCheatSheet/: JupyterCheatSheet.ipynb  Vec3.py  hello_jupyter.py
Lab1/: Lab1IntoToJupyter.ipynb  questions.py
Lecture2/: Lecture1.ipynb  Lecture2.ipynb  Lecture2Marimo.py  conversion.py  dictionary.py  float_assignment.py  float_compare.py  list.py  membership.py  numbers_demo.py  operations.py  slice.py  string_slice.py  strings.py  tuples.py  typeconvert.py
Lecture3/: LSystem.py  Lecture3.ipynb  Lecture3Marimo.py  Square.py  add_function.py  arange.py  break.py  colour_yield.py  compare.py  continue.py  elif.py  exception1.py  float_loop.py  for.py  for_dictionary.py  input_validation.py  iterator.py  jupyter_square.py  list_comprehension.py  logic.py  match_case.py  range.py  recursion_tree.py  recursion_turtle.py  rothko.py  selection.py  sequence.py  throw_away.py  try_except.py  turtle_sequence.py  turtle_square.py  two_squares.py  while.py
Lecture5/: IntroductionToNumpy.ipynb  IntroductionToNumpy.py
Lecture6/: IntroductionToPandas.ipynb  IntroductionToPandasMarimo.py  MatplotlibMarimo.py
Lecture7/: PyTorchAndTensors.ipynb  PyTorchAndTensorsMarimo.py
LinearModel/: LinearModel.ipynb  LinearModelMarimo.py
MNIST/: MainWindow.py  MainWindow.ui  PyTorchDataLoaders.ipynb  PyTorchDataLoadersMarimo.py  ReadDigitsTraining.ipynb  ReadDigitsTrainingMarimo.py  SketchNumbers.py  TheMNISTDataSet.ipynb  TheMNISTDataSetMarimo.py
PreTrainedModels/: PreTrainedModelsPart1.ipynb  imports.py  (+3 more)
(+48 files in other folders)
