[project]
name = "SE For Media Demo Code"
authors = [
  { name="Jon Macey", email="jmacey@bournemouth.ac.uk" },
]
description = "Lecture code for SE for Media course"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
version = "0.0.1"


[tool.mypy]
disable_error_code = "import-untyped"
warn_return_any = true
warn_unused_configs = true
follow_imports="skip"
exclude = "tests/*" 
namespace_packages = true
explicit_package_bases = true



[tool.black]
line-length = 99
target-version = ["py37", "py38", "py39", "py310", "py311"]
skip-magic-trailing-comma = true

[tool.isort]
py_version = 37
profile = "black"
line_length = 99
combine_as_imports = true
skip_gitignore = true
