[project]
name = "SE_For_Media_Demo_Code"
authors = [
  { name="Jon Macey", email="jmacey@bournemouth.ac.uk" },
]
description = "Lecture code for SE for Media course"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
version = "0.0.1"
dependencies = [
    "ipycanvas>=0.14.1",
    "ipyturtle3>=0.1.4",
    "marimo>=0.14.17",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "scikit-learn>=1.7.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },  # Use CUDA on Linux/Windows
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
]

[tool.marimo.display]
default_width = "full"

[tool.ruff]
exclude = [
    "*.ipynb",   # ignore all notebooks
]
